--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,6 @@ jobs:
       - name: Install Ruby version specified in `.ruby-version`
         uses: eregon/use-ruby-action@master # this will use by default the .ruby-version file
 
-      - run: ruby -v
       - run: gem install --no-document bundler
       - run: bundle config path vendor/bundle
       - run: bundle install --jobs 4 --retry 3
@@ -37,6 +36,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
+
       - name: Set environment from cloudtruth
         uses: cloudtruth/configure-action@v1
         with:
@@ -46,15 +48,10 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          docker build --target release -t importer .
+          rake build_release
 
       - name: Push the Docker image
         run: |
           tag=${GITHUB_REF##*/v}
-          echo "Pushing version '$tag' to docker hub"
           echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-
-          docker tag importer cloudtruth/importer:latest
-          docker push cloudtruth/importer:latest
-          docker tag importer cloudtruth/importer:${tag}
-          docker push cloudtruth/importer:${tag}
+          TAGS="$tag latest" rake docker_push
