Updated configure action

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Set environment from cloudtruth
         uses: cloudtruth/configure-action@v2
         with:
-          token: "${{ secrets.CLOUDTRUTH_API_KEY }}"
+          apikey: "${{ secrets.CLOUDTRUTH_API_KEY }}"
           project: "deploy"
           environment: "production"
 
